src/table/table.stories.css
/* stylelint-disable selector-max-specificity */
.tdUrl {
  overflow: hidden;

  max-width: 100px;

  white-space: nowrap;
  text-overflow: ellipsis;
}

.thWithCheckbox label {
  color: unset;
}

.scroller {
  overflow-y: scroll;

  height: 300px;
}

.noChildrenChevronPadding {
  padding-left: 16px;
}

.tdWithChevron {
  box-sizing: border-box;
  width: 190px;
}

.chevron {
  transition: transform var(--ring-fast-ease);
}

.chevronExpanded {
  transform: rotate(90deg);
}

.tcColumnEditingCheckboxWr {
  padding-left: 46px;
}

/* Not visible but accessible for screen readers */
.srOnly {
  position: absolute;

  overflow: hidden;
  clip: rect(0 0 0 0); /* legacy fallback */

  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;

  border: 0;
  clip-path: inset(50%);
}

.teamCityBuilds {
  max-width: 100%;
  margin-left: 4px;

  table-layout: fixed;

  & :is(.build, .details) > td > div {
    overflow: hidden;

    white-space: nowrap;
    text-overflow: ellipsis;
  }

  & thead > tr > th:first-child,
  & tbody > tr > td:first-child {
    border-bottom-style: none;
  }

  &:has(.build:first-child:focus) > thead > tr > th:first-child,
  &:has(.details:nth-child(2):focus) > thead > tr > th:first-child,
  & tbody > tr:focus > td:first-child,
  & tbody > tr:has(+ :focus) > td:first-child,
  & tbody > tr:has(+ tr + .details:focus) > td:first-child,
  & tbody > tr:focus + .details > td:first-child {
    border-bottom-style: solid;
  }
}

.chevronTh {
  width: 12px;

  /* No on-hover bg+borders change */

  pointer-events: none;
}

.chevronTd {
  transition: opacity var(--ring-fast-ease);

  opacity: 0;

  .build:hover &,
  .build:focus-within &,
  .build:has(+ .details:focus-within) & {
    opacity: 1;
  }

  & svg {
    transition: color var(--ring-fast-ease);

    color: var(--ring-icon-color);
  }

  &:hover svg,
  &:focus-within svg {
    color: var(--ring-main-color);
  }
}

.chevronPlaceholder {
  width: 12px;
}

.checkboxTh {
  width: 48px;

  pointer-events: none;
}

.starIcon {
  margin-left: 4px;

  transform: translateY(1px);

  color: var(--ring-icon-color);

  & svg {
    width: 16px;
  }
}

.idTh {
  width: 60px;
}

.build:has(+ .details) > td {
  border-bottom-color: rgba(var(--ring-line-components), 0.5);
}

:is(.build, .details) > td:first-child {
  position: relative;

  &::before {
    position: absolute;
    top: -1px;
    left: -4px;

    width: 4px;
    height: calc(100% + 2px);

    content: '';

    border-top-left-radius: var(--ring-border-radius);
    border-bottom-left-radius: var(--ring-border-radius);
  }
}

:is(.build:focus + .details, .build:has(+ .details:focus)) > td:first-child::before {
  background-color: rgba(var(--ring-main-components), 0.3);
}

.build:has(+ .details) > td:first-child::before {
  border-bottom-left-radius: 0;
}

.build + .details > td:first-child::before {
  border-top-left-radius: 0;
}

.build:focus,
.details:focus {
  outline: none;

  & > td:first-child::before {
    background-color: var(--ring-main-color);
  }
}

.teamCityBuildDetails {
  width: calc(100% - 55px);
  margin-left: 55px;

  & td {
    padding-top: calc(var(--ring-unit) * 0.5);
    padding-bottom: calc(var(--ring-unit) * 0.25);

    vertical-align: top;

    border: 0;

    &:first-child {
      font-weight: 600;
    }
  }

  & ul {
    margin: 0;
  }
}

.details {
  position: relative;
}

.columnAnimationEmulator {
  position: absolute;
  top: 0;
  left: 0;

  width: 0;

  height: 100%;

  pointer-events: none;
}

